syntax="proto3";
option java_package = "rs.lab.rpcdemo.protobuf";

import "CustomerOrder.proto";

message Payment {
    CustomerOrder Order = 1;
    string Type = 2;
}

service Payments {
    rpc NewOrder (NewOrderRequest) returns (NewOrderResponse);
}

message NewOrderRequest {
    CustomerOrder Order = 1;
}

message NewOrderResponse {
    bool Success = 1;
    string Error = 2;
}
